--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,9 +48,13 @@ android {
 dependencies {
 
     def room_version = "2.4.3"
+    def lifecycle_version = "2.5.0-alpha02"
 
     implementation("androidx.room:room-runtime:$room_version")
     kapt("androidx.room:room-compiler:$room_version")
+    implementation("androidx.room:room-ktx:$room_version")
+
+    implementation("androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version")
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
@@ -68,5 +72,6 @@ dependencies {
     implementation ("io.coil-kt:coil:2.2.0")
     implementation "androidx.lifecycle:lifecycle-viewmodel:2.5.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4")
 
 }
