--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ android {
     viewBinding {
         enabled = true
     }
+    namespace 'com.wamser.orgs'
 }
 
 dependencies {
@@ -53,8 +54,9 @@ dependencies {
     implementation("androidx.room:room-runtime:$room_version")
     kapt("androidx.room:room-compiler:$room_version")
     implementation("androidx.room:room-ktx:$room_version")
-
     implementation("androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version")
+    implementation("androidx.datastore:datastore-preferences:1.0.0")
+    implementation('de.hdodenhof:circleimageview:3.1.0')
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
