--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.wamser.orgs">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
@@ -14,17 +13,23 @@
             android:label="Cadastrar usuário" />
         <activity
             android:name=".ui.activity.LoginActivity"
-            android:exported="true"
-            android:theme="@style/Theme.Orgs.NoActionBar">
+            android:theme="@style/Theme.Orgs.NoActionBar"/>
+
+        <activity
+            android:name=".ui.activity.DetalhesUsuarioActivity"
+            android:exported="false"
+            android:label="Perfil"
+            />
+
+        <activity android:name=".ui.activity.DetalhesProdutoActivity" />
+        <activity android:name=".ui.activity.FormularioProdutoActivity" />
+        <activity android:name=".ui.activity.ListaProdutosActivity" android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activity.DetalhesProdutoActivity" />
-        <activity android:name=".ui.activity.FormularioProdutoActivity" />
-        <activity android:name=".ui.activity.ListaProdutosActivity" />
 
         <meta-data
             android:name="preloaded_fonts"
